<resources>
    <string name="app_name">Watchdog</string>
    <string name="sign_in">Sign In</string>
    <string name="register">New To The App ? Sign Up</string>
    <string name="forgot_password">Forgot Your Password ?</string>
    <string name="register_string">Register</string>
    <string name="sign_in_string">Have An Account ? Sign In</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Walker!</string>
    <string name="slide_1_desc">Welcome to the easiest way to make money!</string>

    <string name="slide_2_title">What this App does</string>
    <string name="slide_2_desc">It collects information that you provide and sends it to a team of sellers</string>

    <string name="slide_3_title">Rewards</string>
    <string name="slide_3_desc">The more points you accumulate the more rewards you will receive</string>

    <string name="slide_4_title">Catch ?</string>
    <string name="slide_4_desc">There is no catch. Just doing our bit to help the community</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="emptyPassword">Password is empty</string>
    <string name="shortPassword">The minimum characters for a password is 6</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintEmail">Email</string>
    <string name="nav_header_title">Walkers and Talkers</string>
    <string name="nav_header_subtitle">Hi there</string>

    <string-array name="leadsSpinner">
        <item>Funeral</item>
        <item>Insurance</item>
        <item>Life Cover</item>
        <item>Medical Aid</item>
    </string-array>

    <string name="copyright1">This Privacy Policy governs the manner in which Applord collects, uses, maintains and discloses information collected from users (each, a “User”) of the applord.co.za website (“Site”). This privacy policy applies to the Site and all products and services offered by Applord.</string>
    <string name="copyright2">We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our site, fill out a form, and in connection with other activities, services, features or resources we make available on our Site. Users may be asked for, as appropriate, name, email address, phone number. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain Site related activities.</string>
    <string name="copyright3">We may collect non-personal identification information about Users whenever they interact with our Site. Non-personal identification information may include the browser name, the type of computer and technical information about Users means of connection to our Site, such as the operating system and the Internet service providers utilized and other similar information.</string>
    <string name="copyright4">Our Site may use “cookies” to enhance User experience. User’s web browser places cookies on their hard drive for record-keeping purposes and sometimes to track information about them. User may choose to set their web browser to refuse cookies, or to alert you when cookies are being sent. If they do so, note that some parts of the Site may not function properly.</string>
    <string name="copyright5">We adopt appropriate data collection, storage and processing practices and security measures to protect against unauthorized access, alteration, disclosure or destruction of your personal information, username, password, transaction information and data stored on our Site.</string>
    <string name="copyright6">We do not sell, trade, or rent Users personal identification information to others. We may share generic aggregated demographic information not linked to any personal identification information regarding visitors and users with our business partners, trusted affiliates and advertisers for the purposes outlined above.</string>
    <string name="copyright7">Users may find advertising or other content on our Site that link to the sites and services of our partners, suppliers, advertisers, sponsors, licensors and other third parties. We do not control the content or links that appear on these sites and are not responsible for the practices employed by websites linked to or from our Site. In addition, these sites or services, including their content and links, may be constantly changing. These sites and services may have their own privacy policies and customer service policies. Browsing and interaction on any other website, including websites which have a link to our Site, is subject to that website’s own terms and policies.</string>
    <string name="copyright8">Applord has the discretion to update this privacy policy at any time. When we do, we will revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.</string>
    <string name="copyright9">By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes.</string>
    <string name="copyright10">If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:</string>
    <string name="title_activity_settings2">Settings2</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="wavenumber">2</string>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">Fingerprint Login</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>

    <string name="test1">test1</string>
    <string name="test2">test2</string>
    <string name="test3">test3</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="registerUser">Register</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_preview">Watchdog ("us", "we", or "our") operates the Watchdog mobile application (the "Service").</string>
    <string name="privacy_policy_preview2">This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. Our Privacy Policy for Watchdog is managed through Free Privacy Policy.</string>
    <string name="privacy_policy_preview3">We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</string>
    <string name="privacy_policy_accept">By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes.</string>
</resources>
