<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/background14"
                android:scaleType="centerCrop"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:alpha="0.1"
                android:visibility="gone"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_bg"
                android:visibility="gone">
            </FrameLayout>

        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin32dp"
            android:layout_marginEnd="@dimen/margin32dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:fontFamily="@font/droid_sans_chinese"
                android:textSize="30sp"
                android:textColor="@color/textColorWhite"
                android:gravity="center"/>

            <View
                android:layout_width="10dp"
                android:layout_height="1px"
                android:background="@color/transparentWhite"
                android:layout_marginTop="@dimen/margin16dp"
                android:layout_marginBottom="@dimen/margin16dp"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/login_emailedit"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:layout_marginBottom="@dimen/margin16dp"
                android:textColor="@color/textColorWhite"
                android:fontFamily="@font/droid_sans_chinese"
                android:background="@drawable/edittext_background2"
                android:hint="@string/hintEmail"
                android:paddingLeft="16dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/login_passwordedit"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:layout_marginBottom="@dimen/margin16dp"
                android:textColor="@color/textColorWhite"
                android:fontFamily="@font/droid_sans_chinese"
                android:background="@drawable/edittext_background2"
                android:hint="@string/hintPassword"
                android:paddingLeft="16dp"
                tools:ignore="RtlSymmetry" />


            <Button
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/sign_in"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/textSizeSmall"
                android:fontFamily="@font/droid_sans_chinese"
                android:background="@drawable/button_solid_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin16dp"
                android:layout_marginTop="@dimen/margin32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textColor="@color/textColorWhite"
                    android:fontFamily="@font/droid_sans_chinese"/>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin16dp"
                    android:layout_marginEnd="@dimen/margin16dp"
                    android:background="@color/transparentWhite" />

                <TextView
                    android:id="@+id/textViewRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Register"
                    android:textColor="@color/textColorWhite"
                    android:fontFamily="@font/droid_sans_chinese"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin32dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linear_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin32dp"
            android:layout_marginEnd="@dimen/margin32dp"
            android:layout_marginBottom="@dimen/margin32dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonSize"
                android:layout_marginBottom="@dimen/margin16dp"
                android:text="@string/register"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/textSizeSmall"
                android:fontFamily="@font/droid_sans_chinese"
                android:background="@drawable/edittext_background2"/>

            <Button
                android:id="@+id/button_forgotpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonSize"
                android:text="@string/forgot_password"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/textSizeSmall"
                android:fontFamily="@font/droid_sans_chinese"
                android:background="@drawable/button_solid_blue"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/margin16dp"
            android:background="@color/transparentWhite"
            android:layout_above="@+id/linear_layout_login"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>