<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/materialbackground3"
                android:scaleType="centerCrop"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:alpha="0.1"
                android:visibility="gone"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_bg"
                android:visibility="gone">
            </FrameLayout>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:alpha="0.8"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="-400dp"
            android:alpha="0.5"
            android:rotation="80"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsLayout"
        android:layout_marginStart="@dimen/margin16dp"
        android:layout_marginEnd="@dimen/margin16dp"
        android:layout_marginBottom="@dimen/margin32dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_marginBottom="@dimen/margin8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="64dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/appLogo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/whitelogo"
                    android:alpha="0.8"/>

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:text="W  A  T  C  H  D  O  G"
                    android:textSize="@dimen/textSizeLargex"
                    android:textColor="@color/textColorWhite"
                    android:fontFamily="@font/droid_sans_chinese"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/appNameBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Privacy Policy"
                    android:textSize="@dimen/textSizeMedium"
                    android:textColor="@color/textColorWhite"
                    android:fontFamily="@font/droid_sans_chinese"
                    android:gravity="center"/>

                <TextView
                    android:layout_marginTop="@dimen/margin32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_preview"
                    android:textColor="@color/textColorWhite"
                    android:fontFamily="@font/droid_sans_chinese"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_marginTop="@dimen/margin8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_preview2"
                    android:textColor="@color/textColorWhite"
                    android:fontFamily="@font/droid_sans_chinese"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_marginTop="@dimen/margin8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_preview3"
                    android:textColor="@color/textColorWhite"
                    android:fontFamily="@font/droid_sans_chinese"
                    android:gravity="center"
                    />

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin16dp"
                    android:text="@string/privacy_policy_accept"
                    android:textColor="@color/textColorWhite"
                    android:fontFamily="@font/droid_sans_chinese"
                    android:buttonTint="@color/textColorWhite"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/fullpolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin16dp"
                    android:text="Read The Full Document Here"
                    android:textColor="@color/textColorWhite"
                    android:fontFamily="@font/droid_sans_chinese"
                    android:background="@drawable/button_solid_blackopaque"/>

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/margin32dp"
        android:layout_marginStart="@dimen/margin32dp"
        android:layout_marginEnd="@dimen/margin32dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">


            <ImageView
                android:id="@+id/next_activity"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_navigate_next_black_24dp"
                android:alpha="0.4"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <ImageView
                android:id="@+id/previous_activity"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_navigate_before_black_24dp"
                android:alpha="0.4"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>